fix: update section 1 tab panels

--- a/public/locales/en-GB/dashboard-covid-vaccination.json
+++ b/public/locales/en-GB/dashboard-covid-vaccination.json
@@ -6,7 +6,7 @@
     "zoom": "Zoom into",
     "waffle_header": "How vaccinated against COVID-19 are we?",
     "data": "Data for",
-    "filter_age": "Filter by Age group",
+    "filter_age": "Age group",
     "dose1": "1st Dose",
     "tooltips_dose1": "Number of individuals who have received at least one dose of any vaccine",
     "total": "Total",
@@ -17,7 +17,7 @@
     "tooltips_booster1": "",
     "booster2": "2nd Booster",
     "tooltips_booster2": "",
-    "filter_dose": "Filter by Dose",
+    "filter_dose": "Dose",
     "child": "Children",
     "adolescent": "Adolescent",
     "adult": "Adults",
