--- a/public/locales/ms-MY/dashboard-covid-vaccination.json
+++ b/public/locales/ms-MY/dashboard-covid-vaccination.json
@@ -6,7 +6,7 @@
     "zoom": "Data untuk",
     "waffle_header": "Sejauh manakah kita divaksinasi terhadap COVID-19?",
     "data": "Data untuk",
-    "filter_age": "Tapis ikut kumpulan umur",
+    "filter_age": "Kumpulan umur",
     "dose1": "Dos 1",
     "tooltips_dose1": "Jumlah individu yang telah menerima sekurang-kurangnya satu dos mana-mana vaksin",
     "total": "Keseluruhan",
@@ -17,7 +17,7 @@
     "tooltips_booster1": "",
     "booster2": "Penggalak 2",
     "tooltips_booster2": "",
-    "filter_dose": "Tapis ikut Dos",
+    "filter_dose": "Dos",
     "child": "Kanak-kanak",
     "adolescent": "Remaja",
     "adult": "Dewasa",
