feat: add state routes

--- a/public/locales/en-GB/dashboard-covid-vaccination.json
+++ b/public/locales/en-GB/dashboard-covid-vaccination.json
@@ -4,7 +4,7 @@
     "title_description2": "",
     "description_link": "",
     "zoom": "Zoom into",
-    "waffle_header": "How vaccinated against COVID-19 are we?",
+    "waffle_header": "{{state}}: How vaccinated against COVID-19 are we?",
     "data": "Data for",
     "filter_age": "Age group",
     "dose1": "1st Dose",
@@ -28,7 +28,7 @@
     "combine_tooltip2": "Daily",
     "combine_tooltip3": "Booster 1",
     "combine_tooltip4": "Booster 2",
-    "area_chart_header": "Daily vaccinations by dose and target group",
+    "area_chart_header": "{{state}}: Daily vaccinations by dose and target group",
     "area_chart_title1": "Primary Doses (All Ages)",
     "area_chart_tooltip1": "7d avg",
     "area_chart_tooltip2": "Primary",
