--- a/public/locales/ms-MY/dashboard-covid-vaccination.json
+++ b/public/locales/ms-MY/dashboard-covid-vaccination.json
@@ -4,7 +4,7 @@
     "title_description2": "",
     "description_link": "",
     "zoom": "Data untuk",
-    "waffle_header": "Sejauh manakah kita divaksinasi terhadap COVID-19?",
+    "waffle_header": "{{state}}: Sejauh manakah kita divaksinasi terhadap COVID-19?",
     "data": "Data untuk",
     "filter_age": "Kumpulan umur",
     "dose1": "Dos 1",
@@ -23,12 +23,12 @@
     "adult": "Dewasa",
     "elderly": "Warga emas",
     "combine_header": "Apakah perkembangan terkini program vaksinasi COVID-19?",
-    "combine_title": "Vaksinasi Harian",
+    "combine_title": "{{state}}: Vaksinasi Harian",
     "combine_tooltip1": "Purata 7 hari",
     "combine_tooltip2": "Harian",
     "combine_tooltip3": "Penggalak 1",
     "combine_tooltip4": "Penggalak 2",
-    "area_chart_header": "Vaksinasi harian mengikut jenis dos dan kumpulan sasaran",
+    "area_chart_header": "{{state}}: Vaksinasi harian mengikut jenis dos dan kumpulan sasaran",
     "area_chart_title1": "Dos Utama (Semua Umur)",
     "area_chart_tooltip1": "Purata 7 hari",
     "area_chart_tooltip2": "Utama",
