fix: upate page title

--- a/public/locales/en-GB/dashboard-covid-vaccination.json
+++ b/public/locales/en-GB/dashboard-covid-vaccination.json
@@ -1,4 +1,5 @@
 {
+    "page_title": "COVID-19 Vaccination",
     "header": "The latest data on the National COVID-19 Immunisation Program",
     "description": "Building on the Ministry of Health's previous COVIDNOW dashboard, this page provides a summarised view of the COVID-19 vaccination program in Malaysia, allowing you to track its evolution on a daily basis.",
     "title_description2": "",
