--- a/public/locales/ms-MY/dashboard-covid-vaccination.json
+++ b/public/locales/ms-MY/dashboard-covid-vaccination.json
@@ -1,4 +1,5 @@
 {
+    "page_title": "Vaksinasi COVID-19",
     "header": "Data terkini mengenai Program Imunisasi COVID-19 Kebangsaan",
     "description": "Berdasarkan dashboard COVIDNOW yang sebelumnya, halaman ini memberi ringkasan tentang program imunisasi COVID-19 di Malaysia dan membolehkan anda mengikuti perkembangan terkini setiap hari.",
     "title_description2": "",
